--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
-        "@concurrent-world/client": "^2.2.10",
+        "@concurrent-world/client": "^2.3.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.11.16",
@@ -26,11 +26,15 @@
         "elliptic": "^6.5.4",
         "ethers": "^6.3.0",
         "fuzzysort": "^2.0.4",
+        "i18next": "^23.5.1",
+        "i18next-browser-languagedetector": "^7.1.0",
+        "i18next-http-backend": "^2.2.2",
         "json-schema-to-typescript": "^13.0.1",
         "notistack": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-error-boundary": "^4.0.10",
+        "react-i18next": "^13.2.2",
         "react-infinite-scroller": "^1.2.6",
         "react-markdown": "^8.0.7",
         "react-parallax-tilt": "^1.7.146",
